@@ -14,6 +14,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug [export] Exporting results of a query which contains a LIMIT clause
   inside a subquery
 - bug #2837722 [export] Run complex SQL then export does not work
+- bug #2839548 [export] Triggers order on export
 
 3.2.1.0 (2009-08-09)
 - bug #2799009 Login with ipv6 IP address breaks redirect
